# swansea-fs-pi5-overview

./: .gitignore  CMakeLists.txt  backupmain.cpp  config.h  lv_conf.h  main.cpp  randomCan.sh  socketcan.cpp  socketcan.hpp  spi_ws2812.cpp  spi_ws2812.hpp
.githooks/: post-checkout
RESOURCES/: useful_sites.md
lvgl/.git.old/: FETCH_HEAD  config  index  packed-refs  shallow
lvgl/.git.old/logs/: HEAD
lvgl/.git.old/objects/pack/: pack-d3481c083febc102dee041b8e803455f148a7b0f.idx  pack-d3481c083febc102dee041b8e803455f148a7b0f.rev
squareline/: ui.c  ui.h  ui_Screen1.c  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h
